last fixes to pointers

--- a/help.html
+++ b/help.html
@@ -65,7 +65,7 @@
         <li><strong><code>___</code></strong> - Triple underscore separator for easy parsing</li>
         <li><strong><code>LONGITUDE_LATITUDE</code></strong> - GPS coordinates with 6 decimal places</li>
         <li><strong><code>elev__ELEVATION__</code></strong> - Elevation in meters (if available from GPX)</li>
-        <li><strong><code>.jpg</code></strong> - All files converted to JPEG format for consistency</li>
+        <li><strong><code>.jpg</code></strong> - All images are converted to JPEG format for consistency; videos are not included in the ZIP</li>
     </div>
     
     <h3>Example Output:</h3>
@@ -80,7 +80,7 @@
         <li><strong>Load GPX:</strong> Upload GPS track file with timestamps</li>
         <li><strong>Auto-Assign:</strong> System matches media timestamps with GPX track points</li>
         <li><strong>Manual Adjust:</strong> Fine-tune coordinates by clicking on map if needed</li>
-        <li><strong>Download:</strong> Get ZIP file with all geotagged media using new naming scheme</li>
+        <li><strong>Download:</strong> Get ZIP file with all geotagged photos (images only) using the new naming scheme; a map overview image is also included</li>
     </ol>
     
     <h2>Benefits of This Approach</h2>
